<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="net.divlight.archplayground.ui.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Playground.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name_short" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingTop="16dp"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintWidth_max="@dimen/preferred_max_content_width">

            <Button
                android:id="@+id/launch_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="288dp"
                android:onClick="@{() -> activity.onLaunchButtonClick()}"
                android:text="@string/main_launch" />

            <Button
                android:id="@+id/open_repository_button"
                style="@style/Widget.Playground.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:minWidth="288dp"
                android:onClick="@{() -> activity.onOpenRepositoryButtonClick()}"
                android:text="@string/main_open_repository"
                android:theme="@style/ThemeOverlay.Playground.Button.Light"
                app:icon="@drawable/ic_github_black_24dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
