<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="net.divlight.archplayground.data.Profile" />
        <variable
            name="viewModel"
            type="net.divlight.archplayground.ui.EditProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Playground.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/edit_profile_title" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{viewModel.viewState.contentVisibility}">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                        android:paddingTop="16dp"
                        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                        android:paddingBottom="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintWidth_max="@dimen/preferred_max_content_width">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/last_name_input_layout"
                                style="@style/Widget.Playground.TextInputLayout.OutlinedBox.Dense"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/edit_profile_last_name"
                                app:error="@{viewModel.validationErrors.lastNameError.getErrorText(context)}">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:imeOptions="actionNext"
                                    android:nextFocusForward="@+id/first_name_input_layout"
                                    android:singleLine="true"
                                    android:text="@={viewModel.profile.lastName}"
                                    app:onUnfocused="@{() -> viewModel.onLastNameUnfocused()}" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/first_name_input_layout"
                                style="@style/Widget.Playground.TextInputLayout.OutlinedBox.Dense"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_weight="1"
                                android:hint="@string/edit_profile_first_name"
                                app:error="@{viewModel.validationErrors.firstNameError.getErrorText(context)}">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:imeOptions="actionNext"
                                    android:nextFocusForward="@+id/kana_last_name_input_layout"
                                    android:singleLine="true"
                                    android:text="@={viewModel.profile.firstName}"
                                    app:onUnfocused="@{() -> viewModel.onFirstNameUnfocused()}" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/kana_last_name_input_layout"
                                style="@style/Widget.Playground.TextInputLayout.OutlinedBox.Dense"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/edit_profile_kana_last_name"
                                app:error="@{viewModel.validationErrors.kanaLastNameError.getErrorText(context)}">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:imeOptions="actionNext"
                                    android:nextFocusForward="@+id/kana_first_name_input_layout"
                                    android:singleLine="true"
                                    android:text="@={viewModel.profile.kanaLastName}"
                                    app:onUnfocused="@{() -> viewModel.onKanaLastNameUnfocused()}" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/kana_first_name_input_layout"
                                style="@style/Widget.Playground.TextInputLayout.OutlinedBox.Dense"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_weight="1"
                                android:hint="@string/edit_profile_kana_first_name"
                                app:error="@{viewModel.validationErrors.kanaFirstNameError.getErrorText(context)}">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:singleLine="true"
                                    android:text="@={viewModel.profile.kanaFirstName}"
                                    app:onUnfocused="@{() -> viewModel.onKanaFirstNameUnfocused()}" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Playground.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/edit_profile_phone_number"
                            app:error="@{viewModel.validationErrors.phoneNumberError.getErrorText(context)}">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="phone"
                                android:maxLength="11"
                                android:singleLine="true"
                                android:text="@={viewModel.profile.phoneNumber}"
                                app:onUnfocused="@{() -> viewModel.onPhoneNumberUnfocused()}" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Playground.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/edit_profile_birthday"
                            app:error="@{viewModel.validationErrors.birthdayError.getErrorText(context)}">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:cursorVisible="false"
                                android:focusableInTouchMode="false"
                                android:onClick="@{() -> viewModel.onBirthdayClick()}"
                                android:singleLine="true"
                                android:text="@{viewModel.profile.birthday.getDisplayString(context)}" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Playground.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/edit_profile_zip_code"
                            app:error="@{viewModel.validationErrors.zipCodeError.getErrorText(context)}">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="7"
                                android:singleLine="true"
                                android:text="@={viewModel.profile.zipCode}"
                                app:onUnfocused="@{() -> viewModel.onZipCodeUnfocused()}" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.Playground.TextInputLayout.OutlinedBox.Dense"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/edit_profile_preference"
                                app:error="@{viewModel.validationErrors.prefectureError.getErrorText(context)}">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:cursorVisible="false"
                                    android:focusableInTouchMode="false"
                                    android:onClick="@{() -> viewModel.onPrefectureClick()}"
                                    android:singleLine="true"
                                    android:text="@{viewModel.profile.prefecture.getDisplayString(context)}" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.Playground.TextInputLayout.OutlinedBox.Dense"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_weight="1"
                                android:hint="@string/edit_profile_cities"
                                app:counterEnabled="true"
                                app:counterMaxLength="@{Profile.CITIES_MAX_LENGTH}"
                                app:error="@{viewModel.validationErrors.citiesError.getErrorText(context)}">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:singleLine="true"
                                    android:text="@={viewModel.profile.cities}"
                                    app:onUnfocused="@{() -> viewModel.onCitiesUnfocused()}" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Playground.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/edit_profile_address1"
                            app:counterEnabled="true"
                            app:counterMaxLength="@{Profile.ADDRESS1_MAX_LENGTH}"
                            app:error="@{viewModel.validationErrors.address1Error.getErrorText(context)}">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@={viewModel.profile.address1}"
                                app:onUnfocused="@{() -> viewModel.onAddress1Unfocused()}" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Playground.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:hint="@string/edit_profile_address2"
                            app:counterEnabled="true"
                            app:counterMaxLength="@{Profile.ADDRESS2_MAX_LENGTH}"
                            app:error="@{viewModel.validationErrors.address2Error.getErrorText(context)}">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@={viewModel.profile.address2}"
                                app:onUnfocused="@{() -> viewModel.onAddress2Unfocused()}" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:onClick="@{() -> viewModel.onSaveButtonClick()}"
                            android:text="@string/edit_profile_save"
                            android:visibility="@{viewModel.viewState.updateButtonVisibility}" />

                        <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:visibility="@{viewModel.viewState.updateProgressBarVisibility}" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{viewModel.viewState.progressBarVisibility}" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

</layout>
